# planck_insdb_demo

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  RELEASES.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  run-tests-with-coverage.sh
.github/workflows/: tests.yml
browse/: admin.py  apps.py  custom.py  forms.py  models.py  release_dump.py  serializers.py  tests.py  views.py
browse/management/commands/: delete-all.py  delete-data-files.py  export.py  exportyaml.py  import.py  importyaml.py  updatedb.py
browse/migrations/: 0001_initial.py  0002_auto_20200303_2014.py  0002_release_json_file.py  0003_auto_20200611_1828.py  0003_auto_20230805_1644.py  0004_alter_release_release_document.py  0004_auto_20200630_1030.py  0005_alter_release_release_document_mime_type.py  0005_auto_20200630_1037.py  0006_alter_entity_name_alter_quantity_name.py  0006_auto_20200701_1044.py  0007_alter_datafile_metadata.py  0007_auto_20201001_0340.py
browse/templates/browse/: base_generic.html  datafile_detail.html  entity_detail.html  entity_list.html  formatspecification_detail.html  formatspecification_list.html  password_change_form.html  quantity_detail.html  release_detail.html  release_list.html  user_detail.html
browse/templates/registration/: login.html
browse/templatetags/: customfilters.py
docs/: commandline.rst  conf.py  customization.rst  deployment.rst  index.rst  installation.rst  introduction.rst  releases.rst  tutorial.rst  webapi.rst
examples/: schema.yaml  schema1.yaml  schema2.yaml  spec-001.md  spec-002.md  spec-003.md  tutorial.yaml
images/: logo.txt  readme.txt
instrumentdb/: asgi.py  authentication.py  settings.py  urls.py  wsgi.py
tests/: test_browse.py  test_cmb_imo.py  test_commands.py  test_export_command.py  test_import.py  test_import_commands.py  test_webapi.py  test_yaml_commands.py
uploads/: readme.txt
uploads/data_files/: readme.txt
uploads/format_spec/: readme.txt
uploads/plot_files/: readme.txt
