[tool.poetry]
name = "instrumentdb"
version = "1.1.0"
description = ""
authors = ["Maurizio Tomasi <ziotom78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2.20"
markdown = "^3.2.1"
pygments = "^2.15.0"
djangorestframework = "^3.11.2"
django-filter = "^2.2.0"
pyyaml = "^5.4"
django-mptt = "^0.11.0"
gitpython = "^3.1.30"
envparse = "^0.2.0"
sphinx = "^5.1.1"
django-sslserver = "^0.22"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
manage = "manage:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
