[tool.poetry]
name = "instrumentdb"
version = "2.0.1"
description = ""
authors = ["Maurizio Tomasi <ziotom78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"
django = "^4.2.7"
markdown = "^3.2.1"
pygments = "^2.15.0"
djangorestframework = "^3.13.1"
django-filter = "^2.2.0"
pyyaml = "^6.0.0"
django-mptt = "^0.14.0"
drf-yasg = "^1.21.7"
gitpython = "^3.1.37"
envparse = "^0.2.0"
sphinx = "^5.1.1"
django-sslserver = "^0.22"
Pillow = "^10.0.1"
pytz = "^2022.1"
coverage = "^7.2.7"
flake8 = "^6.0.0"
black = "^23.7.0"
django-cleanup = "^8.0.0"
django-active-link = "^0.1.8"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-django = "^4.5"

[tool.poetry.scripts]
manage = "manage:main"

[build-system]
requires = ["poetry>=1.3.1"]
build-backend = "poetry.masonry.api"
